Fix issue TOC collapse with related postS

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,7 @@
 
 .article-toc{
 	float:right;
-	width:320px;
+	width:240px;
 	position:sticky;top:40px;
 	font-size:small;
 	line-height: normal;
